Optimize code for Java 25 features