@@ -5,8 +5,6 @@ import be.thomasmore.bookserver.model.dto.AuthenticationDTO;
 import be.thomasmore.bookserver.model.dto.UserDTO;
 import be.thomasmore.bookserver.repositories.UserRepository;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -19,59 +17,66 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.security.Principal;
-import java.util.Optional;
 
+/**
+ * REST controller for authentication operations.
+ * Uses constructor injection (Spring best practice since Spring 4.3).
+ */
 @RestController
 @RequestMapping("/api")
 @Slf4j
 public class AuthenticationController {
-    @Autowired
-    UserRepository userRepository;
 
-    @Autowired
-    private PasswordEncoder passwordEncoder;
+    private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
+    private final AuthenticationManager authenticationManager;
 
-    @Autowired
-    private AuthenticationManager authenticationManager;
+    public AuthenticationController(UserRepository userRepository,
+                                    PasswordEncoder passwordEncoder,
+                                    AuthenticationManager authenticationManager) {
+        this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
+        this.authenticationManager = authenticationManager;
+    }
 
     @GetMapping("/authenticate")
     public AuthenticationDTO authenticate(Principal principal) {
         log.info("##### authenticate");
-        return new AuthenticationDTO(principal != null ? principal.getName() : "anonymous");
+        String username = principal != null ? principal.getName() : "anonymous";
+        return new AuthenticationDTO(username);
     }
 
     @PostMapping("/signup")
     public AuthenticationDTO signup(@RequestBody UserDTO userDTO) {
-        log.info("##### signup " + userDTO.getUsername());
-        Optional<User> optionalUser = userRepository.findByUsername(userDTO.getUsername());
-        if (optionalUser.isPresent())
+        log.info("##### signup {}", userDTO.username());
+
+        if (userRepository.findByUsername(userDTO.username()).isPresent()) {
             throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR,
-                    String.format("User with name %s already exists.", userDTO.getUsername()));
+                    "User with name %s already exists.".formatted(userDTO.username()));
+        }
 
         User newUser = new User();
-        newUser.setUsername(userDTO.getUsername());
+        newUser.setUsername(userDTO.username());
         newUser.setRole("USER");
-        String encode = passwordEncoder.encode(userDTO.getPassword());
-        newUser.setPassword(encode);
-        User newSavedUser = userRepository.save(newUser);
+        newUser.setPassword(passwordEncoder.encode(userDTO.password()));
+        User savedUser = userRepository.save(newUser);
 
-        autologin(userDTO.getUsername(), userDTO.getPassword());
+        autologin(userDTO.username(), userDTO.password());
 
-        return new AuthenticationDTO(newSavedUser.getUsername());
+        return new AuthenticationDTO(savedUser.getUsername());
     }
 
     private void autologin(String userName, String password) {
-        UsernamePasswordAuthenticationToken token
-                = new UsernamePasswordAuthenticationToken(userName, password);
+        var token = new UsernamePasswordAuthenticationToken(userName, password);
 
         try {
             Authentication auth = authenticationManager.authenticate(token);
-            log.info("authentication: " + auth.isAuthenticated());
+            log.info("authentication: {}", auth.isAuthenticated());
 
             SecurityContext sc = SecurityContextHolder.getContext();
             sc.setAuthentication(auth);
         } catch (AuthenticationException e) {
-            e.printStackTrace();
+            log.error("Auto-login failed for user: {}", userName, e);
         }
     }
 }
